--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,10 +9,10 @@
 html , body{
     height:100vh;
     width:100vw;
-    background-color: black;
+    background-color: rgb(5, 5, 5);
 }
 body{
-    background:url('../pacote-d013/imagens/fundo-madeira.jpg') no-repeat top center;
+    background:url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -28,5 +28,28 @@ section#telefone{
     transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
-    background: url('../pacote-d013/imagens/frame-iphone.png')no-repeat;
+    background: url('../imagens/frame-iphone.png')no-repeat;
 }
+iframe#tela{
+    position: relative;
+   top: 82px;
+   left:23px;
+   width: 265px;
+   height: 467px;
+}
+section#redes-socias{
+    text-align: right;
+}
+ section#redes-socias img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.404);
+    box-sizing: border-box;
+ }
+ section#redes-socias img:hover{
+    border:2px solid white;
+    transform: translate(-3px, -3px); 
+    transition: transform .3s, border .6s ;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.733);
+ }
